--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "next": "latest",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "latest"
   },
   "devDependencies": {
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "babel-plugin-styled-components": "latest"
   }
 }
